# CMakeExamples

./: .gitignore  README.md
add_two_numbers/: CMakeLists.txt
add_two_numbers/include/: operations.hpp
add_two_numbers/src/: app.cpp  operations.cpp
